<resources>
    <string name="app_name">TaskMaster</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_a_task">Add a task</string>
    <string name="task_title">Task Title:</string>
    <string name="title">Title</string>
    <string name="task_info">Task Info</string>
    <string name="submit">Submit</string>
    <string name="submitted">Submitted!</string>
    <string name="placeholder">Placeholder</string>
    <string name="task_master">Task Master</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid aut consequuntur corporis cupiditate dicta dolor eaque eligendi est et eveniet facere, laboriosam, minima neque obcaecati officiis pariatur rerum similique sint sit tempora temporibus ullam. Blanditiis cum excepturi, facere laboriosam laudantium magnam qui reiciendis, rerum sapiente sint temporibus tenetur ullam unde. A animi dolores explicabo incidunt, nemo porro tempore! Aliquam aperiam earum eligendi enim fugit id ipsam laboriosam magni maxime nesciunt nostrum omnis, quae quidem quis quod temporibus tenetur voluptatem. Atque deserunt repellendus sapiente sed similique sunt voluptas! Aut blanditiis dignissimos distinctio eos expedita maiores nostrum perferendis quasi quos sint? Alias, architecto assumenda blanditiis, consequatur culpa cupiditate excepturi minus nam nesciunt numquam perspiciatis placeat, quaerat quasi quos rerum soluta tempore unde vero? Doloribus, nesciunt provident? Aliquid animi autem culpa dolorum earum facere fuga id in ipsum iusto libero molestiae nesciunt officiis repellat saepe sed tenetur, vitae voluptas. Blanditiis quibusdam sed sint. Aliquid, architecto assumenda dignissimos distinctio, explicabo fuga harum magnam maiores minima mollitia nisi nulla pariatur quasi sapiente sed? Corporis delectus eveniet excepturi laudantium magni obcaecati rem, sunt tenetur. A atque itaque nemo! Aliquam assumenda beatae consectetur corporis delectus eos ex illum inventore modi placeat repellendus, sapiente sequi similique? Quo!</string>
    <string name="settings">Settings</string>
    <string name="username">Username:</string>
    <string name="save">Save</string>
    <string name="enter_username_here">Enter Username Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textview">TextView</string>
    <string name="select_state">Select task state</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_an_image">Add an image</string>
</resources>