<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <Button
        android:id="@+id/HomeActivityAddTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeLabel" />

    <TextView
        android:id="@+id/HomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="309dp"
        android:text="@string/task_master"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HomeNameTextView"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="309dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivityAddTaskButton" />

    <TextView
        android:id="@+id/HomeEmailTextView"
        android:layout_width="370dp"
        android:layout_height="38dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="309dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeNameTextView" />

    <ImageButton
        android:id="@+id/HomeActivitySettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HomeLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/HomeActivityTaskRecyclerView"
        android:layout_width="350dp"
        android:layout_height="511dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="29dp"
        android:minHeight="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeEmailTextView" />

    <Button
        android:id="@+id/HomeActivitySignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HomeLabel"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivitySettingsButton" />

    <Button
        android:id="@+id/HomeActivitySignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HomeActivityAddTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivitySignUpButton" />

    <Button
        android:id="@+id/HomeActivitySignOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toEndOf="@+id/HomeActivityAddTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivitySignInButton" />

</androidx.constraintlayout.widget.ConstraintLayout>