...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsHeader" />

    <EditText
        android:id="@+id/SettingsUsernameEditText"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/enter_username_here"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsUsernameLabel" />

    <Button
        android:id="@+id/SettingsSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="60dp"
...
